Cria página de arranjos e adiciona no menu

--- a/arranjos.html
+++ b/arranjos.html
@@ -29,9 +29,9 @@
 			<nav class="nav-menu">
 				<ul class="menu-list">
 					<li><a href="index.html">Principal</a></li>
-					<li><a href="arranjos.html">Arranjos</a></li>
+                    <li><a class="active" href="arranjos.html">Arranjos</a></li>
 					<li><a href="guirlandas.html">Guirlandas</a></li>
-					<li><a class="active" href="reformas.html">Reformas de arranjos</a></li>
+					<li><a href="reformas.html">Reformas de arranjos</a></li>
 					<li><a href="contato.html">Contato</a></li>
 				</ul>
 			</nav>
@@ -71,35 +71,48 @@
 				<div class="single-content">
 					<div class="container-fluid">
 						<div class="row">
-							<div class="col-md-5">
+							<div class="col-md-7">
 								<div class="images-project">
-									<figure>
-										<img src="upload/portfolio/r1.jpg" alt="Foto do cliente de arranjo reformado">
-										<figcaption>Foto de cliente, de arranjo reformado. O vaso foi limpo e o lodo removido, além de adicionar novas plantas na composição.</figcaption>
-									</figure>
-									<figure>
-										<img src="upload/portfolio/r2.jpg" alt="Foto do cliente de arranjo reformado">
-										<figcaption>Foto de cliente, de arranjo reformado. O vaso e as plantas eram da cliente, e foram apenas compostas no arranjo juntas para serem exibidas.</figcaption>
-									</figure>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <img src="upload/portfolio/a1.jpg" alt="Foto de arranjo feito por nós.">
+                                            <img src="upload/portfolio/a2.jpg" alt="Foto de arranjo feito por nós.">
+                                            <img src="upload/portfolio/a3.jpg" alt="Foto de arranjo feito por nós.">
+                                        </div>
+                                        <div class="col-md-6">
+                                            <img src="upload/portfolio/a4.jpg" alt="Foto de arranjo feito por nós.">
+                                            <img src="upload/portfolio/a5.jpg" alt="Foto de arranjo feito por nós.">
+                                            <img src="upload/portfolio/a6.jpg" alt="Foto de arranjo feito por nós.">
+                                        </div>
+                                    </div>
 								</div>
 							</div>
-							<div class="col-md-7">
+							<div class="col-md-5">
 								<div class="project-content">
 									<h2>Detalhes</h2>
-									<p>Sua guirlanda está fora de época? Tem um arranjo que cresceu demais? Ou que suculentas morreram? Tem várias suculentas em potinhos separados e quer colocar elas todas juntinhas?</p>
-									<p>A reforma de arranjos está aqui para esses e diversos outros casos! Montamos arranjos com suculentas que você já tem, em vasinhos para você colocar no lugar ideal da sua casa. Adicionamos plantinhas novas para substituir as que já se foram, ou pra complementar o arranjo. Damos manutenção nos vasos que precisam, e substituímos os que já não aguentam mais. Só conta pra gente, o que você precisa?</p>
-									<h2>Valores</h2>
-									<p>Como a reforma de arranjos é feita de acordo com a necessidade do cliente, recebemos seu pedido, fazemos uma proposta de modificações com um valor e aí sim fazemos a reforma, caso você concorde!</p>
-									<p><a class="btn-default btn-dark" href="contato.html">
-										<i class="fa fa-shopping-cart"></i>
-										Peça seu orçamento
-									</a></p>
-									<h2>Avise para seus amigos!</h2>
+									<p>Arranjos feitos de suculentas naturais, vivas, plantadas em substrato próprio para suculentas e em diferentes vasos. Cada arranjo é feita com tipos de suculentas diferentes e nenhum arranjo é igual ao outro.
+									<br><em>Faixa de valor:</em> varia bastante dependendo do tamanho do arranjo e das plantas usadas. Se estiver com um orçamento baixo, <a href="contato.html">entre em contato com a gente</a> e podemos fazer um arranjo personalizado pras suas necessidades!</p>
+									<h2>Duração do arranjo</h2>
+									<p>Por volta de <strong>6 meses a 1 ano.</strong></p>
+									<p>O arranjo continua vivo depois disso se você cuidar direitinho! Mas pode perder a forma, já que as plantas crescem, assim como pode ser necessário renovar o substrato ou adubar o arranjo depois desse prazo.</p>
+                                    <p>
+                                        Se estiver em dúvida se precisa reformar seu arranjo, <a href="contato.html">pode perguntar pra gente!</a>
+                                        <br>
+                                        Se não estiver em dúvida, mas sim certeza que precisa do serviço, <a href="reformas.html">fazemos isso pra você!</a>
+                                    </p>
+									<h2>Como cuidar</h2>
+									<p>Cada arranjo é feito de uma forma, com plantas com necessidades específicas de luminosidade e em recipientes com regras específicas de rega. Por isso, sempre que você comprar um arranjo com a gente, receberá um <em>"guia"</em>, que te informa quais plantas estão no seu arranjo, se o vaso precisa de mais ou menos rega e a quantidade de horas de luz recomendada para a peça.</p>
+									<p>Mas, se estiver ainda com dúvidas, <a href="contato.html">pode perguntar pra gente!</a> É um prazer te ajudar a cuidar dessas gordinhas!</p>
+									<h2>Compartilhe com seus amigos!</h2>
 									<ul class="social-icons">
 										<li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
 										<li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
 										<li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
 									</ul>
+									<p><a class="btn-default btn-dark" href="https://www.instagram.com/suculentanne/">
+										<i class="fa fa-shopping-cart"></i>
+										Veja nosso álbum de vendas
+									</a></p>
 
 									<!-- Testimonial-section 
 										================================================== 
