--- a/contato.html
+++ b/contato.html
@@ -29,6 +29,7 @@
 			<nav class="nav-menu">
 				<ul class="menu-list">
 					<li><a href="index.html">Principal</a></li>
+					<li><a href="arranjos.html">Arranjos</a></li>
 					<li><a href="guirlandas.html">Guirlandas</a></li>
 					<li><a href="reformas.html">Reformas de arranjos</a></li>
 					<li><a class="active" href="contato.html">Contato</a></li>
