--- a/error-404.html
+++ b/error-404.html
@@ -29,7 +29,8 @@
 			<nav class="nav-menu">
 				<ul class="menu-list">
 					<li><a href="index.html">Principal</a></li>
-					<li><a class="active" href="guirlandas.html">Guirlandas</a></li>
+					<li><a href="arranjos.html">Arranjos</a></li>
+					<li><a href="guirlandas.html">Guirlandas</a></li>
 					<li><a href="reformas.html">Reformas de arranjos</a></li>
 					<li><a href="contato.html">Contato</a></li>
 				</ul>
