Atualiza redes sociais na sidebar

--- a/contato.html
+++ b/contato.html
@@ -126,15 +126,14 @@
 		<p>Somos amantes de suculentas! E queremos encher sua casa com essas gordinhas também ♥ Por isso, fazemos arranjos lindos, que permitem que essas plantinhas possam ser enfeites especiais para sua casa.</p>
 	</div>
 
-	<div class="instagram-widget side-widget">
-		<h2>Nosso instagram</h2>
-		<ul class="instagram-list">
-			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/1.png" alt=""></a></li>
-			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/2.png" alt=""></a></li>
-			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/3.png" alt=""></a></li>
-			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/4.png" alt=""></a></li>
-			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/5.png" alt=""></a></li>
-			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/6.png" alt=""></a></li>
+	<div class="social-widget side-widget">
+		<h2>Entre em contato</h2>
+		<ul class="social-icons">
+			<li><a class="facebook" href="https://www.facebook.com/suculentanne"><i class="fa fa-facebook"></i></a></li>
+			<li><a class="instagram" href="https://www.instagram.com/suculentanne/"><i class="fa fa-instagram"></i></a></li>
+			<li><a class="twitter" href="https://wpp.ana.rocks/"><i class="fa fa-whatsapp"></i></a></li>
+			<li><a class="linkedin" href="mailto:suculentas@ana.rocks"><i class="fa fa-envelope-o"></i></a></li>
+			<!--li><a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a></li-->
 		</ul>
 	</div>
 
