--- a/arranjos.html
+++ b/arranjos.html
@@ -182,19 +182,12 @@
 
 	<div class="social-widget side-widget">
 		<h2>Entre em contato</h2>
-		<ul class="contact-info">
-			<li>
-				<i class="la la-phone"></i>
-				<p>
-					<a href="https://wpp.ana.rocks/">Whatsapp</a>
-				</p>
-			</li>
-			<li>
-				<i class="la la-envelope"></i>
-				<p>
-					<a href="mailto:suculentas@ana.rocks">suculentas@ana.rocks</a>
-				</p>
-			</li>
+		<ul class="social-icons">
+			<li><a class="facebook" href="https://www.facebook.com/suculentanne"><i class="fa fa-facebook"></i></a></li>
+			<li><a class="instagram" href="https://www.instagram.com/suculentanne/"><i class="fa fa-instagram"></i></a></li>
+			<li><a class="twitter" href="https://wpp.ana.rocks/"><i class="fa fa-whatsapp"></i></a></li>
+			<li><a class="linkedin" href="mailto:suculentas@ana.rocks"><i class="fa fa-envelope-o"></i></a></li>
+			<!--li><a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a></li-->
 		</ul>
 	</div>
 
