--- a/index.html
+++ b/index.html
@@ -303,19 +303,12 @@
 
 	<div class="social-widget side-widget">
 		<h2>Entre em contato</h2>
-		<ul class="contact-info">
-			<li>
-				<i class="la la-phone"></i>
-				<p>
-					<a href="https://wpp.ana.rocks/">Whatsapp</a>
-				</p>
-			</li>
-			<li>
-				<i class="la la-envelope"></i>
-				<p>
-					<a href="mailto:suculentas@ana.rocks">suculentas@ana.rocks</a>
-				</p>
-			</li>
+		<ul class="social-icons">
+			<li><a class="facebook" href="https://www.facebook.com/suculentanne"><i class="fa fa-facebook"></i></a></li>
+			<li><a class="instagram" href="https://www.instagram.com/suculentanne/"><i class="fa fa-instagram"></i></a></li>
+			<li><a class="twitter" href="https://wpp.ana.rocks/"><i class="fa fa-whatsapp"></i></a></li>
+			<li><a class="linkedin" href="mailto:suculentas@ana.rocks"><i class="fa fa-envelope-o"></i></a></li>
+			<!--li><a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a></li-->
 		</ul>
 	</div>
 
@@ -331,6 +324,10 @@
     <script src="http://maps.google.com/maps/api/js?key=AIzaSyCiqrIen8rWQrvJsu-7f4rOta0fmI5r2SI&amp;sensor=false&amp;language=en"></script>
 	<script src="js/gmap3.min.js"></script>
 	<script src="js/script.js"></script>
+	<script type="text/javascript" src="js/extensions/revolution.extension.slideanims.min.js"></script>
+	<script type="text/javascript" src="js/extensions/revolution.extension.layeranimation.min.js"></script>
+	<script type="text/javascript" src="js/extensions/revolution.extension.navigation.min.js"></script>
+	<script type="text/javascript" src="js/extensions/revolution.extension.parallax.min.js"></script>
 
 
 	<!-- END REVOLUTION SLIDER -->
@@ -348,15 +345,15 @@
 					dottedOverlay:"none",
 					delay:9000,
                     navigation: {
-                        keyboardNavigation: "off",
-                        keyboard_direction: "horizontal",
-                        mouseScrollNavigation: "off",
+                        keyboardNavigation: "on",
+                        keyboard_direction: "vertical",
+                        mouseScrollNavigation: "on",
                         onHoverStop: "off",
                         touch: {
                             touchenabled: "on",
                             swipe_threshold: 75,
                             swipe_min_touches: 50,
-                            swipe_direction: "horizontal",
+                            swipe_direction: "vertical",
                             drag_block_vertical: false
                         },
 						bullets:{
@@ -412,10 +409,6 @@
 			}
 		});	/*ready*/
 	</script>
-	<script type="text/javascript" src="js/extensions/revolution.extension.slideanims.min.js"></script>
-	<script type="text/javascript" src="js/extensions/revolution.extension.layeranimation.min.js"></script>
-	<script type="text/javascript" src="js/extensions/revolution.extension.navigation.min.js"></script>
-	<script type="text/javascript" src="js/extensions/revolution.extension.parallax.min.js"></script>
 
 </body>
 </html>
