--- a/error-404.html
+++ b/error-404.html
@@ -29,9 +29,15 @@
 			<nav class="nav-menu">
 				<ul class="menu-list">
 					<li><a href="index.html">Principal</a></li>
-					<li><a href="arranjos.html">Arranjos</a></li>
-					<li><a href="guirlandas.html">Guirlandas</a></li>
-					<li><a href="reformas.html">Reformas de arranjos</a></li>
+					<li><a href="servicos.html">Serviços <i class="la la-angle-right"></i></a>
+						<div class="dropdown">
+							<ul class="drop-list">
+								<li><a href="arranjos.html">Arranjos de Suculentas</a></li>
+								<li><a href="guirlandas.html">Guirlandas</a></li>
+								<li><a href="reformas.html">Reformas de Arranjos</a></li>
+							</ul>
+						</div>
+					</li>
 					<li><a href="contato.html">Contato</a></li>
 				</ul>
 			</nav>
